--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js" async></script>
 
    <!-- scripts -->
-   <script src="/randy/sketch.js" defer></script>
+   <script src="sketch.js" defer></script>
 
    <!-- general info -->
    <title>sketch</title>
